--- a/README.Rmd
+++ b/README.Rmd
@@ -13,3 +13,13 @@ knitr::opts_chunk$set(
   fig.path = "README-"
 )
 ```
+
+# ROKU
+
+An R implementation of ROKU, a method for identifying tissue-specific genes.
+
+Details of the method are described in:
+
+Kadota, K., Ye, J., Nakai, Y., Terada, T., Shimizu, K., 2006. [ROKU: a novel
+method for identification of tissue-specific
+genes](http://www.biomedcentral.com/1471-2105/7/294). BMC Bioinformatics 7, 294.
