Add section on dependencies

--- a/README.Rmd
+++ b/README.Rmd
@@ -23,3 +23,12 @@ Details of the method are described in:
 Kadota, K., Ye, J., Nakai, Y., Terada, T., Shimizu, K., 2006. [ROKU: a novel
 method for identification of tissue-specific
 genes](http://www.biomedcentral.com/1471-2105/7/294). BMC Bioinformatics 7, 294.
+
+## Dependencies
+
+ROKU uses the `affy` package, which can be installed from Bioconductor:
+
+```{r eval=FALSE}
+source("http://bioconductor.org/biocLite.R")
+biocLite("affy")
+```
